2007-04-06  J. Tang  <jtang@tresys.com>

	* Added seaudit_avc_message_get_name() and
	seaudit_sort_by_name().  seaudit now shows AVC messages' name
	field; this column may be be hidden through the updated
	preferences dialog.

	* Updated libqpol to use libsepol >= 2.0.0 if available.
	configure should be able to autodetect this.

2007-04-05  J. Tang  <jtang@tresys.com>

	* sediffx now allows the user to select which components to diff,
	rather than always diffing everything.

	* fix to domain transition analysis, where setexec rules might not
	be found correctly given certain policies.

2007-04-04  J. Tang  <jtang@tresys.com>

	* New configure option --enable-swig-java to enable build of Java
	SWIG wrappers.

2007-04-03  J. Mowery <jmowery@tresys.com>

	* Added apol_file_is_policy_path_list() to validate policy path
	  list files.

	* Added ability to specify policy path list files from command
	  line for all tools taking a policy as an argument.

2007-04-02  J. Mowery <jmowery@tresys.com>

	* Removed the "all_files" symbol from libsefs; this symbol was
	  previously marked as deprecated.

2007-03-29  J. Mowery <jmowery@tresys.com>

	* Libpoldiff SWIG wrapper added; wrapper treats all structures as
	  classes in the target language.

2007-03-28  J. Tang  <jtang@tresys.com>

	* Introduced 'policy list' in apol, seaudit, and sediffx.  This is
	a small text file that contains references to a base policy and
	any number of modules.

2007-03-27  J. Tang  <jtang@tresys.com>

	* added apol_policy_path_create_from_file() and
	apol_policy_path_to_file().

	* apol_str_trim() no longer has a return value; it also operates
	directly on a string, rather than a reference to a string.

	* apol_vector_t and apol_bst_t now require a destructor function
	to be given during creation time, rather than being passed as a
	second parameter respectively to apol_vector_destroy() and
	apol_bst_destroy().  All of SETools has been updated to this
	scheme.
